sorted out cors error and some bugs
